--- a/package.json
+++ b/package.json
@@ -24,37 +24,38 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~4.3.4",
-    "@angular/compiler": "~4.3.4",
-    "@angular/core": "~4.3.4",
-    "@angular/forms": "~4.3.4",
-    "@angular/http": "~4.3.4",
-    "@angular/platform-browser": "~4.3.4",
-    "@angular/platform-browser-dynamic": "~4.3.4",
-    "@angular/router": "~4.3.4",
-    "angular-in-memory-web-api": "~0.3.0",
-    "systemjs": "0.19.40",
-    "core-js": "^2.4.1",
-    "rxjs": "5.0.1",
-    "zone.js": "^0.8.4"
+    "@angular/common": "~9.1.11",
+    "@angular/compiler": "~9.1.11",
+    "@angular/core": "~9.1.11",
+    "@angular/forms": "~9.1.11",
+    "@angular/http": "~7.2.16",
+    "@angular/platform-browser": "~9.1.11",
+    "@angular/platform-browser-dynamic": "~9.1.11",
+    "@angular/router": "~9.1.11",
+    "angular-in-memory-web-api": "~0.11.0",
+    "systemjs": "6.3.2",
+    "core-js": "^3.6.5",
+    "rxjs": "6.5.5",
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "concurrently": "^3.2.0",
-    "lite-server": "^2.2.2",
-    "typescript": "~2.1.0",
-    "canonical-path": "0.0.2",
-    "tslint": "^3.15.1",
-    "lodash": "^4.16.4",
-    "jasmine-core": "~2.4.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~4.0.14",
-    "rimraf": "^2.5.4",
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "2.5.36"
+    "@types/jasmine": "3.5.10",
+    "@types/node": "^14.0.13",
+    "canonical-path": "1.0.0",
+    "concurrently": "^5.2.0",
+    "jasmine-core": "~3.5.0",
+    "karma": "^5.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "lite-server": "^2.5.4",
+    "lodash": "^4.17.15",
+    "npm-check-updates": "^7.0.1",
+    "protractor": "~7.0.0",
+    "rimraf": "^3.0.2",
+    "tslint": "^6.1.2",
+    "typescript": "~3.9.5"
   },
   "repository": {}
 }
